# mpw-modeling-framework

./: .gitignore  .project  README.md  pom.xml
core/: CMakeLists.txt
de.unistuttgart.iste.hamster.model/: .project
de.unistuttgart.iste.modeling.commands/: .classpath  .project
de.unistuttgart.iste.modeling.generator/: .classpath  .gitignore  .project  build.properties
de.unistuttgart.iste.modeling.mpw/: .project  README.md  build.properties  plugin.properties  plugin.xml  representations.aird
de.unistuttgart.iste.modeling.queries/: .classpath  .project  plugin.properties  plugin.xml
de.unistuttgart.iste.modeling.queries.ide/: .classpath  .project
de.unistuttgart.iste.modeling.queries.tests/: .classpath  .gitignore  .project
de.unistuttgart.iste.modeling.queries.ui/: .classpath  .project  plugin.xml  plugin.xml_gen
de.unistuttgart.iste.modeling.queries.ui.tests/: .classpath  .gitignore  .project
de.unistuttgart.iste.modeling.transformations/: .classpath  .gitignore  .project  build.properties  plugin.xml
de.unistuttgart.iste.sqa.mpw.feature/: .project  feature.xml  pom.xml
de.unistuttgart.iste.sqa.mpw.framework.java/: .gitignore  run-sonar.cmd
de.unistuttgart.iste.sqa.mpw.generator.cpp/: .classpath  .gitignore  .project  pom.xml
de.unistuttgart.iste.sqa.mpw.generator.java/: .classpath  .project  pom.xml
de.unistuttgart.iste.sqa.mpw.generator.utils/: .classpath  .gitignore  .project  pom.xml
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/: .gitignore  CMakeLists.txt
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/framework/: Any.h  AssertionFailedException.h  CMakeLists.txt  CollectionHelpers.hpp  CommandConstraintException.h  FrameworkAssert.cpp  FrameworkAssert.h  ObjectListView.hpp  ObservableList.hpp  ObservableListProperty.hpp  ObservableLists.h  ObservableObjectContainmentList.hpp  ObservableObjectContainmentListProperty.hpp  ObservableObjectContainmentProperty.hpp  ObservableObjectList.hpp  ObservableObjectListProperty.hpp  ObservableObjectProperty.hpp  ObservableObjectReferenceList.hpp  ObservableObjectReferenceListProperty.hpp  ObservableObjectReferenceProperty.hpp  ObservablePrimitiveList.hpp  ObservablePrimitiveListProperty.hpp  ObservablePrimitiveProperty.hpp  ObservableProperty.hpp  ReflectivePropertyObject.h  Semaphore.cpp  Semaphore.h  SharedPointerObjectListView.hpp  SimpleObjectContainmentListProperty.hpp  SimpleObjectReferenceListProperty.hpp
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/framework/iterators/: ObjectIterator.hpp  SharedPointerListIterator.hpp  SharedPointerObjectIteratorWrapper.hpp  WeakPointerListIterator.hpp
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/impl/: AddEntityCommandImpl.cpp  AddEntityCommandImpl.h  CMakeLists.txt  CMakeListsImpl.cmake  CommandStackImpl.cpp  CommandStackImpl.h  CompositeCommandBase.cpp  CompositeCommandBase.h  EditorCommandStackImpl.cpp  EditorCommandStackImpl.h  GameCommandStackImpl.cpp  GameCommandStackImpl.h  GameLogImpl.cpp  GameLogImpl.h  GamePerformanceImpl.cpp  GamePerformanceImpl.h  GameViewModelImpl.cpp  GameViewModelImpl.h  GameViewPresenterImpl.cpp  GameViewPresenterImpl.h  HamsterCore.h  HamsterView.h  RemoveEntityCommandImpl.cpp  RemoveEntityCommandImpl.h  SetPropertyCommandImpl.cpp  SetPropertyCommandImpl.h  TerritoryLoader.cpp  TerritoryLoader.h
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/: CMakeLists.txt  FirstSimpleTests.cpp  HamsterCommandTest.cpp  InitHamsterCommandTest.cpp  LocationTest.cpp  TerritoryBuilderTest.cpp  UndoCommandTest.cpp
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/util/: DirectionTestHelper.cpp  DirectionTestHelper.h  GameStringifier.cpp  GameStringifier.h  TestUtils.cpp  TestUtils.h
de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/view/: HamsterViewModelTest.cpp  HamsterViewTestBase.cpp  HamsterViewTestBase.h  UserInputInterfaceFake.cpp  UserInputInterfaceFake.h  ViewModelStringifier.cpp  ViewModelStringifier.h
de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/: pom.xml
de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/: .gitignore
de.unistuttgart.iste.sqa.mpw.karasimulator.java/: pom.xml
de.unistuttgart.iste.sqa.mpw.modeling.commands/: .classpath  .project
de.unistuttgart.iste.sqa.mpw.modeling.framework/: .classpath  .gitignore  .project  build.properties  pom.xml  (+1 more)
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/: .gitignore  CMakeLists.txt
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/core/: CMakeLists.txt
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/core/src/framework/: Any.h  AssertionFailedException.h  CMakeLists.txt  CollectionHelpers.hpp  CommandConstraintException.h  FrameworkAssert.cpp  FrameworkAssert.h  GameAbortedException.h  MpwSemaphore.cpp  MpwSemaphore.h  ObjectListView.hpp  ObservableListProperty.hpp  ObservableObjectContainmentListProperty.hpp  ObservableObjectListProperty.hpp  ObservableObjectProperty.hpp  ObservablePrimitiveListProperty.hpp  ObservableProperties.h  ReflectivePropertyObject.h  Semaphore.h  SharedPointerObjectListView.hpp  SimpleObjectContainmentListProperty.hpp  SimpleObjectReferenceListProperty.hpp
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/core/src/framework/iterators/: InternalObjectIterator.hpp  SharedPointerListIterator.hpp  SharedPointerObjectIteratorWrapper.hpp
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/core/src/impl/: AddEntityCommandImpl.cpp  AddEntityCommandImpl.h  CMakeLists.txt  CMakeListsImpl.cmake  CommandStackImpl.cpp  CompositeCommandBase.cpp  CompositeCommandBase.h  GamePerformanceImpl.cpp  GamePerformanceImpl.h  GameViewModelImpl.cpp  GameViewModelImpl.h  GameViewPresenterBase.cpp  GameViewPresenterBase.h  MpwFrameworkCore.h  RemoveEntityCommandImpl.cpp  SetPropertyCommandImpl.cpp  SetPropertyCommandImpl.h
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/core/test/: CMakeLists.txt  FirstSimpleTests.cpp  LocationTest.cpp
simulators/de.unistuttgart.iste.sqa.mpw.framework.cpp/core/test/testdoubles/: ActorFake.h  PropFake.h  StageFake.h
(+1315 files in other folders)
